--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "@types/node": "^20.17.0",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "nodemon": "^3.0.1"
   },
   "keywords": [],
   "author": "",
