Suppression du fichier d'exemple .env et mise à jour de package.json pour inclure axios. Ajout de la gestion des événements masqués dans le modèle d'événements, avec des fonctionnalités pour renuméroter les événements visibles et des routes pour masquer/démasquer plusieurs événements. Amélioration de la logique de génération des numéros d'événements pour éviter les conflits.

--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "ts-node src/index.ts"
+    "dev": "ts-node -r ./src/env-loader.js src/index.ts"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.41.0",
     "cors": "^2.8.5",
