--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
-    "multer-storage-cloudinary": "^4.0.0"
+    "multer-storage-cloudinary": "^4.0.0",
+    "rate-limiter-flexible": "^8.1.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -30,10 +31,10 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/multer": "^1.4.7",
     "@types/node": "^20.17.0",
+    "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.2.2",
-    "nodemon": "^3.0.1"
+    "typescript": "^5.2.2"
   },
   "keywords": [],
   "author": "",
