--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "dev": "ts-node -r ./src/env-loader.js src/index.ts"
   },
   "dependencies": {
+    "@types/cookie-parser": "^1.4.10",
     "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.41.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
