--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^20.17.0",
     "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
+    "pino": "^9.4.0",
     "cloudinary": "^1.41.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -35,6 +36,7 @@
   },
   "devDependencies": {
     "nodemon": "^3.0.1",
+    "pino-pretty": "^11.2.2",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0"
   },
