--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 PORT=3000
 MONGODB_URI=mongodb+srv://user:password@cluster/dbname
 JWT_SECRET=change-me
+REFRESH_JWT_SECRET=change-me-refresh
 
 # Cloudinary
 CLOUDINARY_CLOUD_NAME=
