--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "ts-node -r ./src/env-loader.js src/index.ts"
+    "dev": "ts-node -r ./src/env-loader.js src/index.ts",
+    "lint": "eslint \"src/**/*.{ts,tsx}\"",
+    "lint:fix": "eslint \"src/**/*.{ts,tsx}\" --fix",
+    "format": "prettier --write \"src/**/*.{ts,tsx,json,md}\"",
+    "format:check": "prettier --check \"src/**/*.{ts,tsx,json,md}\""
   },
   "dependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -35,7 +39,14 @@
     "typescript": "^5.2.2"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.11.0",
+    "@typescript-eslint/parser": "^8.11.0",
+    "eslint": "^9.13.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.31.0",
+    "typescript-eslint": "^8.11.0",
     "nodemon": "^3.0.1",
+    "prettier": "^3.3.3",
     "pino-pretty": "^11.2.2",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0"
